# pyra

./: .gitignore  .mise.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINING.md  README.md  SECURITY.md  install.sh  mise.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/pyra-cli/: Cargo.toml
crates/pyra-cli/src/: lib.rs  main.rs
crates/pyra-cli/src/cli/: mod.rs
crates/pyra-cli/src/commands/: add.rs  doctor.rs  init.rs  lock.rs  mod.rs  outdated.rs  project_python.rs  python.rs  remove.rs  run.rs  self_update.rs  sync.rs  update.rs  use_python.rs
crates/pyra-cli/tests/: command_contracts.rs  exit_code_contracts.rs  project_commands.rs  python_commands.rs  run_commands.rs  sync_commands.rs
crates/pyra-core/: Cargo.toml
crates/pyra-core/src/: config.rs  context.rs  error.rs  lib.rs  paths.rs  verbosity.rs
crates/pyra-errors/: Cargo.toml
crates/pyra-errors/src/: lib.rs
crates/pyra-project/: Cargo.toml
crates/pyra-project/src/: doctor.rs  environment.rs  error.rs  execution.rs  identity.rs  init.rs  lib.rs  outdated.rs  pyproject.rs  service.rs  update.rs
crates/pyra-project/src/sync/: install.rs  lockfile.rs  marker.rs  mod.rs  project_input.rs  selection.rs
crates/pyra-python/: Cargo.toml
crates/pyra-python/src/: client.rs  error.rs  host.rs  lib.rs  model.rs  requests.rs  service.rs  store.rs  version.rs
crates/pyra-resolver/: Cargo.toml
crates/pyra-resolver/src/: error.rs  lib.rs  marker.rs  metadata.rs  model.rs  provider.rs  request.rs  simple.rs  test_support.rs  version.rs
crates/pyra-ui/: Cargo.toml
crates/pyra-ui/src/: lib.rs  output.rs  terminal.rs
dev-docs/: README.md  add-remove-model.md  environment-model.md  error-model.md  execution-roadmap.md  package-cache-model.md  product-direction.md  resolution-scope.md  run-model.md  self-update-model.md
dev-docs/backlog/open-source-readiness/: execution-roadmap.md  idea.md  release-readiness.md  status.md
dev-docs/templates/: open-source-readiness-checklist.md  release-readiness-prompt.md  roadmap-generation-prompt.md
docs/: README.md  astro.config.mjs  command-contracts.md  doctor-model.md  error-model.md  execution-roadmap.md  group-semantics.md  installer-boundary.md  llm-delivery-standard.md  lock-command-model.md  lock-format-notes.md  outdated-model.md  package-lock.json  package.json  product-direction.md  pyproject-contract.md  resolution-scope.md  run-model.md  sync-model.md  testing-strategy.md  update-model.md
docs/backlog/: README.md
docs/src/: content.config.ts
docs/src/content/docs/: index.mdx  roadmap.md  status.md
docs/src/content/docs/concepts/: dependency-selection.md  environments.md  lockfile.md  python-management.md  sync-model.md
docs/src/content/docs/getting-started/: index.md
docs/src/content/docs/internals/: architecture.md  project-structure.mdx
docs/src/content/docs/reference/: commands.md  doctor.md  json-output.md
docs/src/pages/: 404.astro
docs/src/styles/: custom.css
docs/templates/: execution-roadmap-template.md  idea-brief-template.md  status-template.md  task-execution-prompt.md
