[package]
name = "pyra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pyra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
pyra-core = { path = "../pyra-core" }
pyra-errors = { path = "../pyra-errors" }
pyra-project = { path = "../pyra-project" }
pyra-python = { path = "../pyra-python" }
pyra-ui = { path = "../pyra-ui" }
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
flate2.workspace = true
predicates = "3.1"
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
