[package]
name = "pyra-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
pep440_rs.workspace = true
pep508_rs.workspace = true
pyra-core = { path = "../pyra-core" }
pyra-errors = { path = "../pyra-errors" }
pyra-python = { path = "../pyra-python" }
pyra-resolver = { path = "../pyra-resolver" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
