[package]
name = "pyra-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
flate2.workspace = true
pyra-core = { path = "../pyra-core" }
pyra-errors = { path = "../pyra-errors" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
